--- a/Server/Forms/FrmMain.resx
+++ b/Server/Forms/FrmMain.resx
@@ -307,20 +307,19 @@
   </data>
   <data name="remoteWebcamToolStripMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAK4SURBVDhPbZFfSFNxHMV/OOvuEpQIlQbD0qkQbv1BelBENu+SKDAqSOlBCAo1RRPtoaCC/hNU
-        WlT4p7ewOfG/YtuDmu5P0S2aIbblQL1TaW4horlevt3zc0YPXTjcwzmfc393d2zzKjRZGBGxjjftyfJH
-        uTIwPT0YVIJTEDwym9qBKTRJsVXsunPzFr+PvxsrCCqKc3V19Xc0GqX19XUueGTowPy7YTUVVfxk17jz
-        WCgUUtbW1mh5efm/QgcGLDbV6pbZh96y3q6eFPVVP6+srFAkEgFEHo+HrFYrFzwydGDA9nZ1p2DLT/d+
-        8dajXFpaooWFBWpqaqYLVbV08epdLnhk6MCAxQZb9uD2vW2B6YAdRTgcps7OTjpRXErnG6z0cGSKCx4Z
-        OjBgscGW2dradX6ffyoYDNLc3BzVVNeQ8dxlOm6bIMn2lQseGTowYLGxtVl1zPq6be+E1/tdfSL5fD4q
-        KS6hxNO1JD5xk/jIuSHVI0MHBiw22LLmF02Jk5OTnsXFRYKu1NfR9oNm0tR1UNx1Oxc8MnSbHDbY8r/y
-        g+d9I14NxfDwMB3OPkKC0ULxp25wwSNDBwYsNnw8OjLKBvsHctUnhhRF4b+vr6+PThYVkT5zPxc8MnRg
-        wGKDLXv57DkrLjoT5xwbv+b75ov+/Uh+P7lcLi74zY8MBiw22PJrYGCI5eebTA0NT+dlWaZAIECzs7M0
-        MzPDBY9Mlj9Ro8rk5eWbunv6N8bVtXVMn55hLpCO+iVLIZWVV1BLSys57A5yu91cDoeDWltfUXn5JQJj
-        liz+falp5rKKSsYEQdAZjEZZr0+nnbt2/0pK3vMzNU3/w2Awzufk5CqQwXBgHhk6MOkZmZSVZZDj47fo
-        mCiKSTsSEh6r9/taUTy7VRAkjUaTo75ctqpDMWUjUw+TwIDFRtBqk/4AyHJvzhoJdeoAAAAASUVORK5C
-        YII=
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAArhJREFUOE9t
+        kV9IU3EcxX846+4SlAiVBsPSqRBu/UF6UEQ275IoMCpI6UEICjVFE+2hoIL+E1RaVPint7A58b9i24Oa
+        7k/RLZohtuVAvVNpbiGiuV6+3fNzRg9dONzDOZ9zf3d3bPMqNFkYEbGON+3J8ke5MjA9PRhUglMQPDKb
+        2oEpNEmxVey6c/MWv4+/GysIKopzdXX1dzQapfX1dS54ZOjA/LthNRVV/GTXuPNYKBRS1tbWaHl5+b9C
+        BwYsNtXqltmH3rLerp4U9VU/r6ysUCQSAUQej4esVisXPDJ0YMD2dnWnYMtP937x1qNcWlqihYUFampq
+        pgtVtXTx6l0ueGTowIDFBlv24Pa9bYHpgB1FOBymzs5OOlFcSucbrPRwZIoLHhk6MGCxwZbZ2tp1fp9/
+        KhgM0tzcHNVU15Dx3GU6bpsgyfaVCx4ZOjBgsbG1WXXM+rpt74TX+119Ivl8PiopLqHE07UkPnGT+Mi5
+        IdUjQwcGLDbYsuYXTYmTk5OexcVFgq7U19H2g2bS1HVQ3HU7FzwydJscNtjyv/KD530jXg3F8PAwHc4+
+        QoLRQvGnbnDBI0MHBiw2fDw6MsoG+wdy1SeGFEXhv6+vr49OFhWRPnM/FzwydGDAYoMte/nsOSsuOhPn
+        HBu/5vvmi/79SH4/uVwuLvjNjwwGLDbY8mtgYIjl55tMDQ1P52VZpkAgQLOzszQzM8MFj0yWP1GjyuTl
+        5Zu6e/o3xtW1dUyfnmEukI76JUshlZVXUEtLKznsDnK73VwOh4NaW19RefklAmOWLP59qWnmsopKxgRB
+        0BmMRlmvT6edu3b/Skre8zM1Tf/DYDDO5+TkKpDBcGAeGTow6RmZlJVlkOPjt+iYKIpJOxISHqv3+1pR
+        PLtVECSNRpOjvly2qkMxZSNTD5PAgMVG0GqT/gDIcm/OGgl16gAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="passwordRecoveryToolStripMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -338,6 +337,20 @@
         lFCjcRJqF9NB0N0Hl01IFpYFz5QcFkXK3PmGhEh2bVxYWBMbzlTtDl/TZUDTVYqbBhHiS6iRfRIqhtnB
         VKtgyGfvgXdKBt9PHfqVXKdZnVHLLpdNcjnHfl0vRLyUGiTwTvacGmg8IR3RHJ0ZVB+xW1Xcv931mZXR
         IBvSsn2/dDtiJdSO1XNQ/wBgH9SZbXHbWQAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="remoteMicrophoneToolStripMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAABl0RVh0U29mdHdhcmUAcGFpbnQubmV0IDQuMC4xMkMEa+wAAAHQSURBVDhPYxh8
+        oN7enmW6t4vqUR/37OOqqktOqygv322iU7ne1cpgVagWG1QZbjDXzzvkjYTk7R98Aj/+srD//8vN8/8n
+        D++vF8qKDzbYW5VClWGCVaGhzIt83AI+WZh9+cfE9v8fAwsc/+Hg+g808P9zG+t/mx3sylZpYXFJubm5
+        wis5uev/2Dj//2MEagTi/0DNIAw2iJH1/282rv83jQxuL7Yx04JqQ4CNvo5hX0RFvoCc/Y+FDa4ZbgAU
+        /xAW+TdZWjIfqg0B1ntaF38XF/31l5Xj/19mVANA+C/IVUxAzMr6f76c5DyoNgSYY2tW8k1Q6BfEJmYw
+        hmkGi4E0c3CAXbdcWmoJVBsCzNbTDn/HzvUVbBvUALjTgbb/5eEG2g50HSvHvz4RMUwvZIrxK+3l5j73
+        k5EZYgDQxr9sbP//cnEBNfMA+cCYAQbiPXOL68u9XDSh2hBgFQMDcwI/f9AdKf7vv3iAikFOZmEF2goM
+        VLBmzv//I6P+L/XxKZppbMwK1YYJ6uSEo88piJ37KijwCxylrJz/P8kpfb9pYnp1gad7fijQIqhS7KCe
+        gYGlWE1OsU5QMLVRVLSvQUqqP09fP22ys7MaXpsHCDAwAADSduao1mUIUQAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="surveillanceToolStripMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -423,7 +436,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADY
-        sQAAAk1TRnQBSQFMAgEB+AEAAcgBCAHIAQgBEAEAAQsBAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        sQAAAk1TRnQBSQFMAgEB+AEAAdABCAHQAQgBEAEAAQsBAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
         AwABQAMAAbUBAgIAAQEBAAEIBQABQAGtGAABgAIAAYADAAKAAQABgAMAAYABAAGAAQACgAIAA8ABAAHA
         AdwBwAEAAfABygGmAQABMwUAATMBAAEzAQABMwEAAjMCAAMWAQADHAEAAyIBAAMpAQADVQEAA00BAANC
         AQADOQEAAYABfAH/AQACUAH/AQABkwEAAdYBAAH/AewBzAEAAcYB1gHvAQAB1gLnAQABkAGpAa0CAAH/
